--- a/.github/workflows/snk.yml
+++ b/.github/workflows/snk.yml
@@ -2,8 +2,11 @@ name: generate animation
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+    - main
   schedule:
-    - cron: "0 */24 * * *" # every 24 hours
+    - cron: "0 */12 * * *" # every 12 hours
 
 jobs:
   generate:
@@ -11,12 +14,13 @@ jobs:
     timeout-minutes: 10
     steps:
       - name: generate github-contribution-grid-snake.svg
-        uses: Platane/snk@master
+        uses: Platane/snk/svg-only@v1.1.2
         with:
-          github_user_name: rexlow
+          github_user_name: ${{ github.repository_owner }}
           svg_out_path: dist/github-contribution-grid-snake.svg
+
       - name: push github-contribution-grid-snake.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v2.5.0
+        uses: crazy-max/ghaction-github-pages@v2.6.0
         with:
           target_branch: output
           build_dir: dist
